[package]
name = "zeko-v5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-shutdown = "0.1.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", features = ["builder", "cache", "client", "gateway", "http", "collector", "rustls_backend"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.3.17"
ataraxy = "0.1.1"